# spartan-teamlog

./: .flaskenv  .gitignore  MIGRATION_SHA256.md  README.md  pyproject.toml
.github/: copilot-instructions.md
flaskr/: __init__.py  auth.py  cli.py  db.py  migrate_idhash.py  models.py  routes.py
flaskr/static/css/: styles.css
flaskr/static/js/: custom.js
flaskr/templates/: base.html  edit_member.html  index.html  member_detail.html  members.html
flaskr/templates/auth/: login.html
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_factory.py  test_integration.py  test_models.py  test_routes.py
